# POS_Core

./: .gitattributes  .gitignore  CHANGELOG_v15.5.19.md  CHANGELOG_v15.5.20.md  CHANGELOG_v15.5.21.md  CHANGELOG_v15.5.22.md  CHANGELOG_v15.5.23.md  CHANGELOG_v15.5.24.md  CHANGELOG_v15.5.25.md  CHANGELOG_v15.5.26.md  CHANGELOG_v15.5.27.md  CHANGELOG_v15.5.28.md  CHANGELOG_v15.6.1.md  CHANGELOG_v15.6.2.md  CHANGELOG_v15.6.3.md  CHANGELOG_v15.6.4.md  CHANGELOG_v15.6.5.md  CHANGELOG_v15.6.6.md  CHANGELOG_v15.6.7.md  CHANGELOG_v15.6.8.md  CHANGELOG_v15.6.9.md  CHANGELOG_v15.7.0.md  CHANGELOG_v15.7.1.md  CHANGELOG_v15.7.10.md  CHANGELOG_v15.7.11.md  CHANGELOG_v15.7.12.md  CHANGELOG_v15.7.13.md  CHANGELOG_v15.7.14.md  CHANGELOG_v15.7.2.md  CHANGELOG_v15.7.3.md  CHANGELOG_v15.7.4.md  CHANGELOG_v15.7.5.md  CHANGELOG_v15.7.6.md  CHANGELOG_v15.7.7.md  CHANGELOG_v15.7.8.md  CHANGELOG_v15.7.9.md  CHANGELOG_v15.8.0.md  CHANGELOG_v15.8.1.md  CHANGELOG_v15.8.2.md  CHANGELOG_v15.8.3.md  (+27 more)
alphax_pos_suite/: Makefile  __init__.py  hooks.py  patches.txt  spa_payload.py
alphax_pos_suite/alphax_pos_suite/: api.py  install.py  setup_repair.py
alphax_pos_suite/fixtures/: workspace.json
alphax_pos_suite/frontend/: vite.config.js
alphax_pos_suite/www/: bonanza_order.html
alphax_pos_suite/www/table_qr/: index.py  (+1 more)
docs/: 01-cashier-manual.md  02-manager-manual.md  03-administrator-manual.md  04-implementer-manual.md  README.md  v3-cashier-mockup.html  v3-cashier-plan.md
docs/exports/: 01-cashier-manual.docx  02-manager-manual.docx  03-administrator-manual.docx  04-implementer-manual.docx
(+96 files in other folders)
